Fixed jump, updated timeline images, added logo, updated styles

--- a/css/common.css
+++ b/css/common.css
@@ -23,6 +23,7 @@ html {
 /*div{outline: 1px solid red}*/
 
 body {
+  background-color: black;
 }
 * {
   margin:0;
